mm/dd/yy

8/6/19
Fix ordering of page via prefix (mangastream)

7/29/19
Add url precheck with popup when running bookmarklet on unexpected pages (mangadex, e621, pixiv, mangastream)
Move proxy variable for easier changing
Add mangastream Bookmarklet
Improve memory handling (mangadex, e621)

5/18/19
Proxy requests when images is not on the same domain (mangadex)

5/17/19
Add concurrent limits
Push e621.js and original non-working implementation
First minify copy-paste ready dist release
Add filtering buttons to Mangadex Menu
Port Mangadex Menu to Bookmarklet

5/16/19
Add wiki as submodule and move pixiv notes
Push pixiv.js and original non-working implementation
Seperate Readme and Changelog
Use script.text instead of script.innerText
Add bookmarklet example files
Allow non-iframed scoped bookmarklet
First release and source code tracking